@@ -256,9 +256,10 @@ struct language_entry {
 #define MSG_EMPTY_ARCHIVE                        171
 #define MSG_ATTACHED_MESSAGE_NOTICE              172
 #define MSG_FORWARDED_MESSAGE_NOTICE             173
-#define MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE    174
-#define MSG_EMPTY_ARCHIVE_NOTICE                 175
-#define MSG_CSS_NORMAL_VIEW                      176
+#define MSG_ATTACHMENTS_NOTICE                   174
+#define MSG_ATTACHMENTS_FOR_MESSAGE_NOTICE       175
+#define MSG_EMPTY_ARCHIVE_NOTICE                 176
+#define MSG_CSS_NORMAL_VIEW                      177
 
 #ifdef MAIN_FILE
 
@@ -457,7 +458,8 @@ char *de[] = {       /* German */
   "Nothing received yet!", /* MSG_EMPTY_ARCHIVE - HTML */
   "attached message", /* MSG_ATTACHED_MESSAGE_NOTICE - HTML */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
-  "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
+  "Attachments", /* MSG_ATTACHMENTS_NOTICE */
+  "Attachments for message", /* MSG_ATTACHMENTS_FOR_MESSAGE_NOTICE */  
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */
   "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                              /* End Of Message Table - NOWHERE*/
@@ -644,7 +646,8 @@ char *pl[] = {                      /* English */
   "Nothing received yet!", /* MSG_EMPTY_ARCHIVE - HTML */
   "attached message", /* MSG_ATTACHED_MESSAGE_NOTICE - HTML */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
-  "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
+  "Attachments", /* MSG_ATTACHMENTS_NOTICE */
+  "Attachments for message", /* MSG_ATTACHMENTS_FOR_MESSAGE_NOTICE */    
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
   "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                              /* End Of Message Table      - NOWHERE*/
@@ -832,7 +835,8 @@ char *en[] = {       /* English */
   "Nothing received yet!", /* MSG_EMPTY_ARCHIVE - HTML */
   "attached message", /* MSG_ATTACHED_MESSAGE_NOTICE - HTML */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
-  "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
+  "Attachments", /* MSG_ATTACHMENTS_NOTICE */
+  "Attachments for message", /* MSG_ATTACHMENTS_FOR_MESSAGE_NOTICE */      
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
   "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                         /* End Of Message Table      - NOWHERE*/
@@ -1031,7 +1035,8 @@ char *es[] = {       /* Espanol/Spanish */
   "Nothing received yet!", /* MSG_EMPTY_ARCHIVE - HTML */
   "attached message", /* MSG_ATTACHED_MESSAGE_NOTICE - HTML */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */  
-  "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
+  "Attachments", /* MSG_ATTACHMENTS_NOTICE */
+  "Attachments for message", /* MSG_ATTACHMENTS_FOR_MESSAGE_NOTICE */      
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
   "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                               /* End Of Message Table */
@@ -1221,7 +1226,8 @@ char *pt[] = {                     /* Brazilian Portuguese */
   "Nothing received yet!", /* MSG_EMPTY_ARCHIVE - HTML */
   "attached message", /* MSG_ATTACHED_MESSAGE_NOTICE - HTML */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
-  "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
+  "Attachments", /* MSG_ATTACHMENTS_NOTICE */
+  "Attachments for message", /* MSG_ATTACHMENTS_FOR_MESSAGE_NOTICE */        
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
   "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                                /* End Of Message Table      - NOWHERE*/
@@ -1407,7 +1413,8 @@ char *fi[] = {       /* Finnish */
   "Nothing received yet!", /* MSG_EMPTY_ARCHIVE - HTML */
   "attached message", /* MSG_ATTACHED_MESSAGE_NOTICE - HTML */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
-  "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
+  "Attachments", /* MSG_ATTACHMENTS_NOTICE */
+  "Attachments for message", /* MSG_ATTACHMENTS_FOR_MESSAGE_NOTICE */          
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
   "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                              /* End Of Message Table      - NOWHERE*/
@@ -1596,7 +1603,8 @@ char *it[] = {       /* Italian */
   "Nothing received yet!", /* MSG_EMPTY_ARCHIVE - HTML */
   "attached message", /* MSG_ATTACHED_MESSAGE_NOTICE - HTML */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
-  "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
+  "Attachments", /* MSG_ATTACHMENTS_NOTICE */
+  "Attachments for message", /* MSG_ATTACHMENTS_FOR_MESSAGE_NOTICE */            
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
   "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                          /* End Of Message Table      - NOWHERE*/
@@ -1784,7 +1792,8 @@ char *fr[] = {       /* French */
   "Nothing received yet!", /* MSG_EMPTY_ARCHIVE - HTML */
   "attached message", /* MSG_ATTACHED_MESSAGE_NOTICE - HTML */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
-  "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
+  "Attachments", /* MSG_ATTACHMENTS_NOTICE */
+  "Attachments for message", /* MSG_ATTACHMENTS_FOR_MESSAGE_NOTICE */              
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
   "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                                    /* End Of Message Table  - NOWHERE*/
@@ -1974,7 +1983,8 @@ char *is[] = {       /* Icelandic */
   "Nothing received yet!", /* MSG_EMPTY_ARCHIVE - HTML */
   "attached message", /* MSG_ATTACHED_MESSAGE_NOTICE - HTML */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
-  "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
+  "Attachments", /* MSG_ATTACHMENTS_NOTICE */
+  "Attachments for message", /* MSG_ATTACHMENTS_FOR_MESSAGE_NOTICE */                
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
   "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                               /* End Of Message Table      - NOWHERE*/
@@ -2167,7 +2177,8 @@ char *sv[] = {
   "Nothing received yet!", /* MSG_EMPTY_ARCHIVE - HTML */
   "attached message", /* MSG_ATTACHED_MESSAGE_NOTICE - HTML */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
-  "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
+  "Attachments", /* MSG_ATTACHMENTS_NOTICE */
+  "Attachments for message", /* MSG_ATTACHMENTS_FOR_MESSAGE_NOTICE */                  
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */
   "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                             /* End Of Message Table    - NOWHERE*/
@@ -2360,7 +2371,8 @@ char *no[] = {
   "Nothing received yet!", /* MSG_EMPTY_ARCHIVE - HTML */
   "attached message", /* MSG_ATTACHED_MESSAGE_NOTICE - HTML */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
-  "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
+  "Attachments", /* MSG_ATTACHMENTS_NOTICE */
+  "Attachments for message", /* MSG_ATTACHMENTS_FOR_MESSAGE_NOTICE */                    
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
   "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                             /* End Of Message Table    - NOWHERE*/
@@ -2554,7 +2566,8 @@ char *gr[] = {       /* Greek */
   "Nothing received yet!", /* MSG_EMPTY_ARCHIVE - HTML */
   "attached message", /* MSG_ATTACHED_MESSAGE_NOTICE - HTML */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
-  "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
+  "Attachments", /* MSG_ATTACHMENTS_NOTICE */
+  "Attachments for message", /* MSG_ATTACHMENTS_FOR_MESSAGE_NOTICE */                      
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
   "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                           	/* End Of Message Table - NOWHERE*/
@@ -2740,7 +2753,8 @@ char *ru[] = {     /* Russian */
   "Nothing received yet!", /* MSG_EMPTY_ARCHIVE - HTML */
   "attached message", /* MSG_ATTACHED_MESSAGE_NOTICE - HTML */
   "Forwarded message", /* MSG_FORWARDED_MESSAGE_NOTICE - HTML */
-  "List of stored attachments", /* MSG_LIST_OF_STORED_ATTACHMENTS_NOTICE */
+  "Attachments", /* MSG_ATTACHMENTS_NOTICE */
+  "Attachments for message", /* MSG_ATTACHMENTS_FOR_MESSAGE_NOTICE */                        
   "(no messages are available in this archive)", /* MSG_EMPTY_ARCHIVE_NOTICE */  
   "Normal view", /* MSG_CSS_NORMAL_VIEW */
   NULL,                          /* End Of Message Table      - NOWHERE*/
